logs/archive/merge_46161929.err
  File "/global/u2/w/wa176/ece534-finance-project/scripts/merge.py", line 441
    ap.add_argument(
IndentationError: unexpected indent
  File "/global/u2/w/wa176/ece534-finance-project/scripts/merge.py", line 441
    ap.add_argument(
IndentationError: unexpected indent
  File "/global/u2/w/wa176/ece534-finance-project/scripts/merge.py", line 441
    ap.add_argument(
IndentationError: unexpected indent
  File "/global/u2/w/wa176/ece534-finance-project/scripts/merge.py", line 441
    ap.add_argument(
IndentationError: unexpected indent
E1207 21:28:22.770000 904995 torch/distributed/elastic/multiprocessing/api.py:882] failed (exitcode: 1) local_rank: 0 (pid: 905028) of binary: /pscratch/sd/w/wa176/ece534-envs/.venv/bin/python
Traceback (most recent call last):
  File "/pscratch/sd/w/wa176/ece534-envs/.venv/bin/torchrun", line 7, in <module>
    sys.exit(main())
             ^^^^^^
  File "/pscratch/sd/w/wa176/ece534-envs/.venv/lib/python3.11/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 357, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/pscratch/sd/w/wa176/ece534-envs/.venv/lib/python3.11/site-packages/torch/distributed/run.py", line 936, in main
    run(args)
  File "/pscratch/sd/w/wa176/ece534-envs/.venv/lib/python3.11/site-packages/torch/distributed/run.py", line 927, in run
    elastic_launch(
  File "/pscratch/sd/w/wa176/ece534-envs/.venv/lib/python3.11/site-packages/torch/distributed/launcher/api.py", line 156, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/pscratch/sd/w/wa176/ece534-envs/.venv/lib/python3.11/site-packages/torch/distributed/launcher/api.py", line 293, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
scripts/merge.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-12-07_21:28:22
  host      : nid001889-hsn0
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 905029)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2025-12-07_21:28:22
  host      : nid001889-hsn0
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 905030)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2025-12-07_21:28:22
  host      : nid001889-hsn0
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 905031)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-12-07_21:28:22
  host      : nid001889-hsn0
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 905028)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
srun: error: nid001889: task 0: Exited with exit code 1
srun: Terminating StepId=46161929.0
